# trajectory_utils

./: CMakeLists.txt  package.xml
src/: discretized_path.cpp  discretized_path.h  discretized_trajectory.cpp  discretized_trajectory.h  matplotlibcpp.h  reference_line.cpp  reference_line.h  test.cpp  trajectory_info.cpp  trajectory_info.h
src/math/: discrete_points_math.cpp  discrete_points_math.h  line_segment2d.cpp  line_segment2d.h  linear_interpolation.cpp  linear_interpolation.h  math_utils.cpp  math_utils.h  vec2d.cpp  vec2d.h
src/proto/: pnc_point.pb.cc  pnc_point.pb.h  pnc_point.proto
